add news & styles

--- a/assets/application.scss.liquid
+++ b/assets/application.scss.liquid
@@ -44,7 +44,7 @@ $accent-color: {{ theme_settings.accent-color }};
 
 // Foods
 $food-separator-color: #f0f0f0;
-
+$separator-color: #f0f0f0;
 // ===========================================================================
 // #Box model
 // ===========================================================================
@@ -1281,12 +1281,12 @@ body {
   filter: alpha(opacity=99); /* internet explorer */
     -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(opacity=99)"; /*IE8*/
 }
-/* 
-  100% Height for Opera as the max-height seems to be ignored, not optimal for large screens 
-  http://bricss.net/post/11230266445/css-hack-to-target-opera 
+/*
+  100% Height for Opera as the max-height seems to be ignored, not optimal for large screens
+  http://bricss.net/post/11230266445/css-hack-to-target-opera
 */
 x:-o-prefocus, .lb-overlay img {
-    height: 100%;
+  height: 100%;
 }
 
 
@@ -1309,6 +1309,62 @@ x:-o-prefocus, .lb-overlay img {
     font-weight: 700;
   }
 
+// news
+.news {
+    margin-top: 1em;
+  }
+.news__header {
+  margin-bottom: 1em;
+}
+.home-news-title__link {
+  text-decoration: none;
+  color: $body-color;
+  font-weight: bold;
+  font-size: 1.5em;
+  display: inline-block;
+  transition: color .25s;
+  &:hover {
+    color: $accent-color;
+  }
+}
+.news__one-news {
+}
+.news__one-news-link {
+  color: $body-color;
+  text-decoration: none;
+}
+.news__one-news-image {
+  width: 100%;
+  display: block;
+  height: 300px;
+  background-position: center center;
+}
+.news__one-news-content-wrapper {
+  width: 100%;
+  padding: 0;
+}
+.news__one-news-date {
+  font-weight: bold;
+  margin-bottom: .5em;
+  font-size: .75em;
+}
+.news__one-news-content {
+}
+.news__one-news-title {
+  font-size: 1.75em;
+  font-weight: bold;
+}
+.news__one-news-summary {
+  margin-bottom: 0;
+  padding-top: .75em;
+}
+.news__separator {
+  border: 1px solid $separator-color;
+  margin: 1.5em 0;
+}
+.news__separator--last {
+  display: none;
+}
 
 // ===========================================================================
 // #Icomoon font
@@ -1544,6 +1600,30 @@ x:-o-prefocus, .lb-overlay img {
     .contact-item__name {
       margin-top: 2.15em;
     }
+
+    // news
+  .news__one-news {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+  }
+  .news__one-news-image {
+    position: absolute;
+    width: 30%;
+    display: block;
+    height: auto;
+    top: 0;
+    left: 0;
+    bottom: 0;
+  }
+  .news__one-news-content-wrapper {
+    width: 70%;
+    float: right;
+    padding: 1em 2em;
+  }
+  .news__one-news-content-wrapper--no-image {
+    width: 100%;
+  }
 }
 
 // > Large
