--- a/templates/menu.liquid
+++ b/templates/menu.liquid
@@ -20,9 +20,9 @@
       {% endif %}
     </header>
     {% if menu.summary? %}
-      <main class="section__main page-header__description">
+      <div class="section__main page-header__description">
         {{ menu.summary }}
-      </main>
+      </div>
     {% endif %}
   </div>
 </section>
