--- a/templates/contacts/form.liquid
+++ b/templates/contacts/form.liquid
@@ -69,9 +69,9 @@
     <header class="section__header page-header__header">
       <h1 class="section__title page-header__title">{{ contact_settings.contact_title }}</h1>
     </header>
-    <main class="section__main page-header__description">
+    <div class="section__main page-header__description">
       {{ contact_settings.contact_content }}
-    </main>
+    </div>
   </section>
 
   <section class="page-body page-body--contact">
