--- a/layouts/theme.liquid
+++ b/layouts/theme.liquid
@@ -48,6 +48,15 @@
               </a>
             </div>
           {% endif %}
+          {% if localized_page_paths.size > 0 %}
+            <div class="local-choice">
+              {% for path in localized_page_paths %}
+                <a href="{{ path.url }}" class="local-choice-item {% if path.current? %}local-choice-item--current{% endif %}">
+                  <span class="local-choice-code">{% if forloop.last %}{{ path.locale_code }}{% else %}{{ path.locale_code }}<span class="local-separator">|</span>{% endif%}</span>
+                </a>
+              {% endfor %}
+            </div>
+          {% endif %}
         </div>
       </header>
       <nav id="nav" class="main-nav" role="navigation">
