--- a/snippets/food.liquid
+++ b/snippets/food.liquid
@@ -5,7 +5,7 @@
   <div class="food__body">
     <h5 class="food__title">
       {% if food.featured_in_menu? %}
-        <i class="icon-star"></i>
+        <i class="icon icon-star"></i>
       {% endif %}
       {{ food.name }}
     </h3>
