change color local active in footer

--- a/assets/application.scss.liquid
+++ b/assets/application.scss.liquid
@@ -900,7 +900,7 @@ body {
         }
       }
       .footer__local-choice-item--current {
-        color: $accent-color;
+        color: $body-color;
       }
       .footer__local-separator {
         color: scale-color($body-color, $lightness: +25%);
