add default styles for tags

--- a/assets/application.scss.liquid
+++ b/assets/application.scss.liquid
@@ -1186,6 +1186,8 @@ body {
     font-size: .95em;
     border-radius: $radius;
     padding: .2em .4em;
+    background-color: #AAAAAA;
+    color: #FFFFFF;
   }
     .tag--vegan, .tag--vegetarian {
       background-color: #8a9e6c;
