--- a/layouts/theme.liquid
+++ b/layouts/theme.liquid
@@ -74,8 +74,10 @@
 
     {{ 'jquery-2.1.1.min.js' | javascript_tag }}
     {{ 'doubletaptogo.min.js' | javascript_tag }}
+    {{ 'venobox.min.js' | javascript_tag }}
     <script type="text/javascript">
       $( function() {
+        $('.venobox').venobox();
         $( '.has-sub-nav' ).doubleTapToGo();
         $('.main-nav__toggle').click(function(){
           $('.local-choice-wrapper').toggle();
