fixe styles select for firefox

--- a/assets/application.scss.liquid
+++ b/assets/application.scss.liquid
@@ -663,6 +663,8 @@ body {
     margin: 0 auto;
     background: transparent;
     -webkit-appearance: none;
+    -moz-appearance: window;
+    appearance: none;
     font-size: 16px;
     font-weight: bold;
     color: $body-color;
