add tableonline module in footer

--- a/snippets/footer.liquid
+++ b/snippets/footer.liquid
@@ -1,4 +1,10 @@
 <div class="wrapper">
+
+  <div class="reserve-module">
+    <h3>Reservation :</h3>
+    <iframe src='https://ib.guestonline.fr/instabook/bookings/DThKf1O' width='320px' height='450px' frameborder='0' allowTransparency='true' scrolling='yes' ></iframe>
+  </div>
+
   <div class="back-to-top">
     <a class="back-to-top__link" href="#top">
       <span class="back-to-top__label">{{ "Haut de la page" | t }}</span>
