--- a/assets/application.scss.liquid
+++ b/assets/application.scss.liquid
@@ -832,6 +832,10 @@ body {
   background-color: scale-color($body-color, $lightness: +95%);
   border-top: 1px solid scale-color($body-color, $lightness: +85%);
 }
+  .reserve-module {
+    text-align: center;
+    padding-top: .5em;
+  }
   .back-to-top {
     padding: $gutter;
     text-align: center;
