architecture js & gulp concat + uglify - dev & build modes

--- a/layouts/theme.liquid
+++ b/layouts/theme.liquid
@@ -72,17 +72,6 @@
       </footer>
     </section>
 
-    {{ 'jquery-2.1.1.min.js' | javascript_tag }}
-    {{ 'doubletaptogo.min.js' | javascript_tag }}
-    {{ 'venobox.min.js' | javascript_tag }}
-    <script type="text/javascript">
-      $( function() {
-        $('.venobox').venobox();
-        $( '.has-sub-nav' ).doubleTapToGo();
-        $('.main-nav__toggle').click(function(){
-          $('.local-choice-wrapper').toggle();
-        });
-      });
-    </script>
+    {{ 'app.js' | javascript_tag }}
   </body>
 </html>
