--- a/assets/application.scss.liquid
+++ b/assets/application.scss.liquid
@@ -674,7 +674,7 @@ body {
   }
 }
   .toggle--close {
-    background-color: $body-color;
+    background-color: $accent-color;
   }
 .main-nav:not(:target) .toggle--open,
 .main-nav:target .toggle--close {
@@ -685,6 +685,7 @@ body {
   display: none;
   height: auto;
   margin-bottom: 0;
+  clear: both;
   @include media-query($min, $siteWidth) {
     display: block;
   }
