--- a/dev/scss/components/_header.scss
+++ b/dev/scss/components/_header.scss
@@ -1,12 +1,9 @@
 // ===========================================================================
 // #Header
 // ===========================================================================
-.main-header {
-  .wrapper {
-    position: relative;
-  }
+.c-header {
 }
-  .identity {
+  .c-header__identity {
     @include media-query($min, $small) {
       @include media;
     }
@@ -15,17 +12,17 @@
       width: 65%;
     }
   }
-  .logo {
+  .c-header__logo {
     text-align: center;
     @include media-query($min, $small) {
       @include media-aside;
     }
   }
-    .logo__link {
+    .c-header__logo-link {
       display: block;
       text-decoration: none;
     }
-      .logo__image {
+      .c-header__logo-image {
         padding: 1em 0;
         vertical-align: middle;
         width: 180px;
@@ -34,7 +31,7 @@
           margin-right: 1.5em;
         }
       }
-  .restaurant-name {
+  .c-header__restaurant-name {
     text-align: center;
     @include media-query($min, $small) {
       @include media-body;
@@ -42,19 +39,19 @@
       text-align: left;
     }
   }
-    .slogan {
+    .c-header__slogan {
       color: scale-color($body-color, $lightness: +25%);
       font-size: .9em;
       font-style: italic;
     }
-    .restaurant-name__link {
+    .c-header__restaurant-name-link {
       color: scale-color($body-color, $lightness: -25%);
       font-family: {{ theme_settings.header-font }};
       font-size: 2em;
       line-height: 1;
       text-decoration: none;
     }
-  .phone-number {
+  .c-header__phone-number {
     margin: .5em 0;
     text-align: center;
     @include media-query($min, $medium) {
@@ -67,7 +64,7 @@
       top: 32px;
     }
   }
-    .phone-number__link {
+    .c-header__phone-number-link {
       color: $accent-color;
       font-size: 1.5em;
       text-decoration: none;
@@ -85,7 +82,7 @@
         color: $body-color;
       }
 
-  .local-choice-wrapper {
+  .c-header__local-choice-wrapper {
     position: relative;
     z-index: 10;
     display: inline-block;
@@ -100,7 +97,7 @@
       top: 32px;
     }
   }
-  .local-choice {
+  .c-header__local-choice {
     cursor: pointer;
     width: 65px;
     height: 30px;
@@ -119,7 +116,7 @@
     position: relative;
     z-index: 1;
   }
-  .local-choice__icon {
+  .c-header__local-choice-icon {
     position: absolute;
     top: .25em;
     right: .5em;
