--- a/layouts/theme.liquid
+++ b/layouts/theme.liquid
@@ -20,46 +20,8 @@
   </head>
   <body>
     <section class="page" id="top">
-      <header class="main-header">
-        <div class="wrapper">
-          {% if localized_page_paths.size > 0 %}
-            <div class="local-choice-wrapper">
-              <select class="local-choice" name="language" id="language" onChange="location = this.options[this.selectedIndex].value;">
-                {% for path in localized_page_paths %}
-                  <option value="{{ path.url }}" class="local-choice-item" {% if path.current? %}selected{%endif%}>{{ path.locale_code }}</option>
-                {% endfor %}
-              </select>
-              <i class="icon icon-arrow-down local-choice__icon"></i>
-            </div>
-          {% endif %}
-          <div class="identity">
-            {% if restaurant.logo? %}
-              <div class="logo">
-                <a class="logo__link" href="{{ localized_root_path }}">
-                  {{ restaurant.logo_url | image_tag:'class:logo__image' }}
-                </a>
-              </div>
-            {% endif %}
-            <div class="restaurant-name">
-              <a class="restaurant-name__link" href="{{ localized_root_path }}">
-                {{ restaurant.name }}
-              </a>
-              {% if restaurant.slogan? %}
-                <div class="slogan">
-                  {{ restaurant.slogan }}
-                </div>
-              {% endif %}
-            </div>
-          </div>
-          {% if restaurant.phone? %}
-            <div class="phone-number">
-              <a class="phone-number__link" href="tel:{{ restaurant.phone_uri }}">
-                <i class="icon icon-phone"></i> <span class="phone-number__label">{{ restaurant.phone }}</span>
-              </a>
-            </div>
-          {% endif %}
-
-        </div>
+      <header class="c-header">
+        {% include 'header' %}
       </header>
       <nav id="nav" class="main-nav" role="navigation">
         {% include 'nav' %}
