refactor wrapper object

--- a/snippets/header.liquid
+++ b/snippets/header.liquid
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="o-wrapper">
   {% if localized_page_paths.size > 0 %}
     <div class="c-header__local-choice-wrapper">
       <select class="c-header__local-choice" name="language" id="language" onChange="location = this.options[this.selectedIndex].value;">
