--- a/snippets/menu.liquid
+++ b/snippets/menu.liquid
@@ -3,7 +3,7 @@
     {{ menu.main_image | custom_image_url: '1920x590#' | image_tag:'class: menu__image' }}
   {% endif %}
   {% if menu.depth == 1 %}
-    <div class="wrapper">
+    <div class="o-wrapper">
   {% endif %}
   {% if title == true %}
     <div class="menu__header">
