--- a/templates/contacts/form.liquid
+++ b/templates/contacts/form.liquid
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="o-wrapper">
   <aside class="aside aside--contact" itemscope itemtype="http://schema.org/Restaurant">
     <div class="contact-item">
       <h3 class="contact-item__name" itemprop="name">{{ restaurant.name }}</h3>
