--- a/templates/menus.liquid
+++ b/templates/menus.liquid
@@ -1,5 +1,5 @@
 <section class="page-header page-header--menus">
-  <div class="wrapper">
+  <div class="o-wrapper">
     <header class="section__header page-header__header">
       <h1 class="section__title page-header__title">{{ "Notre carte" | t }}</h1>
     </header>
@@ -7,7 +7,7 @@
 </section>
 
 <section class="menus">
-  <div class="wrapper">
+  <div class="o-wrapper">
     {% for menu in menus %}
       <header class="section__header">
         <h2 class="section__title">
