--- a/templates/news.liquid
+++ b/templates/news.liquid
@@ -1,5 +1,5 @@
 <section class="page-header page-header--news">
-  <div class="wrapper">
+  <div class="o-wrapper">
     <header class="section__header">
       <h1 class="section__title">{{ news.title }}</h1>
     </header>
@@ -8,7 +8,7 @@
 </section>
 
 <section class="page-body page-body--news">
-  <div class="wrapper">
+  <div class="o-wrapper">
     <main class="section__main">
       {{ news.content }}
     </main>
