--- a/templates/news_index.liquid
+++ b/templates/news_index.liquid
@@ -1,5 +1,5 @@
 <section class="page-header page-header--news">
-  <div class="wrapper">
+  <div class="o-wrapper">
     <header class="section__header page-header__header">
       <h1 class="section__title page-header__title">{{ "Actualités" | t }}</h1>
     </header>
@@ -7,7 +7,7 @@
 </section>
 
 {% if all_news.size > 0 %}
-  <section class="wrapper">
+  <section class="o-wrapper">
     <section class="news">
       <main class="section__main news__body">
         {% for news in all_news %}
