--- a/templates/404.liquid
+++ b/templates/404.liquid
@@ -1,5 +1,5 @@
 <section class="page-header page-header--error">
-  <div class="wrapper">
+  <div class="o-wrapper">
     <header class="section__header page-header__header">
       <h1 class="page-header__title">{{ "Page introuvable" | t }}</h1>
     </header>
