--- a/templates/contacts/thanks.liquid
+++ b/templates/contacts/thanks.liquid
@@ -1,5 +1,5 @@
 <section class="page-header page-header--contact">
-  <div class="wrapper">
+  <div class="o-wrapper">
     <header class="section__header page-header__header">
       <h1 class="section__title page-header__title">{{ contact_settings.thanks_title }}</h1>
     </header>
