--- a/templates/menu.liquid
+++ b/templates/menu.liquid
@@ -1,5 +1,5 @@
 <section class="page-header page-header--menu">
-  <div class="wrapper">
+  <div class="o-wrapper">
     <header class="section__header page-header__header">
       <h1 class="section__title page-header__title">{{ menu.name }}</h1>
       {% if menu.children? %}
