--- a/templates/newsletter/form.liquid
+++ b/templates/newsletter/form.liquid
@@ -1,6 +1,6 @@
 {% newsletter_subscribe_form %}
   <section class="page-header page-header--newsletter">
-    <div class="wrapper">
+    <div class="o-wrapper">
       <header class="section__header page-header__header">
         <h1 class="section__title page-header__title">{{ "Inscription à la newsletter" | t }}</h1>
       </header>
@@ -22,7 +22,7 @@
   </section>
 
   <section class="newsletter-form">
-    <div class="wrapper">
+    <div class="o-wrapper">
       <fieldset class="field-group">
         <div class="input">
           <label for="subscriberEmail">{{ "Votre adresse email :" | t }}</label>
