--- a/templates/newsletter/thanks.liquid
+++ b/templates/newsletter/thanks.liquid
@@ -1,5 +1,5 @@
 <section class="page-header page-header--newsletter">
-  <div class="wrapper">
+  <div class="o-wrapper">
     <header class="section__header page-header__header">
       <h1 class="section__title page-header__title">{{ "Inscription enregistrée" | t }}</h1>
     </header>
