--- a/templates/page.liquid
+++ b/templates/page.liquid
@@ -1,5 +1,5 @@
 <section class="page-header page-header--page">
-  <div class="wrapper">
+  <div class="o-wrapper">
     <header class="section__header page-header__header">
       <h1 class="section__title page-header__title">{{ page.title }}</h1>
     </header>
@@ -7,7 +7,7 @@
 </section>
 
 <section class="page-body page-body--legal">
-  <div class="wrapper">
+  <div class="o-wrapper">
     <div class="section__main">
       {{ page.content }}
     </div>
